add print warning to knn

--- a/KNN Algorithm/KNN Algorithm.ipynb
+++ b/KNN Algorithm/KNN Algorithm.ipynb
@@ -67,6 +67,7 @@
     "for i in range(len(x_test)):\n",
     "    instance = np.array([x_test[i]])\n",
     "    kn.predict(instance)\n",
+    "    # print predictions \n",
     "    \n",
     "print(kn.score(x_test, y_test))"
    ]
